# nyanversationalist

./: .gitignore  README.md  pyproject.toml
nyanversationalist/: .gitignore  controllers.py  nyanversation_gpt3_bot.py  sentiment_guessing.py
tests/: test_nyanversationalist.py
